--- a/Views/Events/Details.cshtml
+++ b/Views/Events/Details.cshtml
@@ -50,5 +50,23 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.EventId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="mt-3">
+        @if (User.IsInRole("Admin"))
+        {
+            <a class="btn btn-secondary"
+               asp-controller="Events"
+               asp-action="Index">
+                ← Back to Event List
+            </a>
+        }
+        else
+        {
+            <a class="btn btn-primary"
+               asp-controller="Home"
+               asp-action="Index">
+                ← Back to Home
+            </a>
+        }
+    </div>
+
 </div>
