--- a/Views/SeatTypes/Delete.cshtml
+++ b/Views/SeatTypes/Delete.cshtml
@@ -1,45 +1,34 @@
 ﻿@model SmartEvent.Models.SeatType
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Seat Type";
 }
 
-<h1>Delete</h1>
+<h1>Delete Seat Type</h1>
 
 <h3>Are you sure you want to delete this?</h3>
+
 <div>
-    <h4>SeatType</h4>
+    <h4>Seat Type</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TypeName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TypeName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.QuantityAvailable)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.QuantityAvailable)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Event)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Event.Category)
-        </dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.TypeName)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.TypeName)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Price)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Price)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.QuantityAvailable)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.QuantityAvailable)</dd>
+
+        <dt class="col-sm-2">Event</dt>
+        <dd class="col-sm-10">@((Model.Event?.EventName) ?? "-")</dd>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="SeatTypeId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" asp-route-eventId="@Model.EventId" class="btn btn-secondary ms-2">Back</a>
     </form>
 </div>
