--- a/Views/SeatTypes/Index.cshtml
+++ b/Views/SeatTypes/Index.cshtml
@@ -1,53 +1,51 @@
 ﻿@model IEnumerable<SmartEvent.Models.SeatType>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Seat Types";
+    var eventId = ViewBag.EventId as int?;
 }
 
-<h1>Index</h1>
+<h1>Seat Types</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+@if (eventId != null)
+{
+    <p>
+        <a asp-action="Create" asp-route-eventId="@eventId" class="btn btn-primary">Add Seat Type</a>
+        <a asp-controller="Events" asp-action="Index" asp-route-id="@eventId" class="btn btn-secondary ms-2">Back to Event</a>
+    </p>
+}
+else
+{
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Create New</a>
+    </p>
+}
+
+<table class="table table-striped align-middle">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TypeName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.QuantityAvailable)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Event)
-            </th>
-            <th></th>
+            <th>Type</th>
+            <th>Price</th>
+            <th>Quantity Available</th>
+            <th>Event</th>
+            <th style="width:180px;"></th>
         </tr>
     </thead>
+
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TypeName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QuantityAvailable)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Event.Category)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.SeatTypeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.SeatTypeId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SeatTypeId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.TypeName</td>
+                <td>@item.Price.ToString("0.00")</td>
+                <td>@item.QuantityAvailable</td>
+                <td>@(item.Event?.EventName ?? "-")</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.SeatTypeId" class="btn btn-sm btn-warning">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.SeatTypeId" class="btn btn-sm btn-info">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.SeatTypeId" class="btn btn-sm btn-danger">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
