--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@
                                 <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Admin</a>
                             </li>
 }
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Users" asp-action="Index">Manage Members</a>
+                            </li>
+                        }
 
                     </ul>
 
