--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,6 +39,11 @@
                             </li>
                         }
 
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Admin" asp-action="Reports">Reports</a>
+                        </li>
+
+
                     </ul>
 
                     <partial name="_LoginPartial" />
@@ -60,6 +65,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
